# OnlineStore

./: .gitignore  README.md  activate-venv.ps1  lint_format.bat  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_alter_post_is_published_and_more.py  0003_post_author_alter_post_is_published_and_more.py
blog/templates/: post_confirm_delete.html  post_list.html
catalog/: admin.py  apps.py  cache_utils.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
catalog/fixtures/: categories.json  groups.json  products.json
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_options_product_is_published.py  0004_alter_product_created_at_alter_product_is_published.py  0005_product_owner.py  0006_fill_owner_for_existing_products.py  0007_alter_product_owner.py  0008_alter_product_owner.py  0009_fill_owner_for_existing_products.py  0010_alter_product_owner.py
catalog/templates/: add_product.html  base.html  home.html  product_form.html
config/: settings.py  urls.py
templates/: base.html
templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
templates/catalog/: add_product.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
templates/includes/: navbar.html
templates/users/: logged_out.html  login.html  profile_confirm_delete.html  profile_form.html  (+1 more)
users/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
(+8 files in other folders)
