[project]
name = "onlinestore"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Shcherbyna",email = "Alex_181173@list.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
